[tool.poetry]
name = "python-template"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = ""
readme = "README.md"

[tool.poetry.scripts]
slay = "game:main"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
ansimarkup = "^2.1.0"
entities = "^1.0.0"
events = "^0.5"
items = "^0.6.5"
pysaml2 = "^7.4.2"
rapid-router = "^5.15.10"
helper = "^2.5.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"

[tool.pytest.ini_options]
pythonpath = "/workspaces/Slay-The-Spire-in-Python"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"