[tool.poetry]
name = "python-template"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = ""
readme = "README.md"

[tool.poetry.scripts]
slay = "game:main"

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
ansimarkup = "^2.1.0"
pytest = "^7.4.3"
grandalf = "^0.8"
pyinstaller = "^6.3.0"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
pytest-only = "^2.0.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
pythonpath = "/workspaces/Slay-The-Spire-in-Python"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"